[package]
name = "ungoliant"
version = "2.0.0"
authors = [
    "Julien Abadji <julien.e.abadji@gmail.com>, Pedro J. Ortiz <pedro@pjortiz.com>",
]
edition = "2021"
description = "The pipeline for the OSCAR corpus."
license = "Apache-2.0"
homepage = "https://github.com/oscar-project/ungoliant"
repository = "https://github.com/oscar-project/ungoliant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "stream",
] }
flate2 = { version = "1.0.28" }
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
structopt = "0.3.26"
env_logger = "0.10.1"
log = "0.4.20"
itertools = "0.12.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
warc = { version = "0.3.1", features = ["with_serde"] }
ut1_blocklist = "0.3.2"
fasttext = "0.7.8"
bytes = "1"
rayon = "1"
twox-hash = "1.6"
glob = "0.3.1"
sha2 = "0.10.8"

oscar-tools = { version = "0.4.0", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8.16"
runiq-lib = "1.2.2"
rand = "0.8.5"
url = "2.5.0"
avro-rs = { version = "0.13.0", features = ["snappy"] }
unicode-script = "0.5.5"
unicode-segmentation = "1.10.1"
csv = "1.3.0"
unic-ucd = "0.9.0"
oxilangtag = { version = "0.1.3", features = ["serde"] }
language-tags = "0.3.2"
lazy_static = "1.4.0"
oscar-io = "0.4.0"
tlsh-fixed = "0.1.1"

ctclib-pp = { git = "https://github.com/pjox/ctclib", optional = true }


[features]
kenlm = ["dep:ctclib-pp"]
checksum = ["dep:oscar-tools"]

[dev-dependencies]
rand_distr = "0.4.3"
sha-1 = "0.10"
criterion = "0.5"
serial_test = "2.0.0"
tempfile = "3.8.1"
test-log = "0.2.14"
zstd = "0.13.0"

[[bench]]
name = "fasttext_bench"
harness = false

[[bench]]
name = "pipeline_bench_rayon"
harness = false

[[bench]]
name = "annotate_noisy"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
